# deep-agent-real-estate

./: .gitignore  Chapter_65___OFFICERS__BOARDS_AND_PROCEDURES.docx  OrlandoFLCodeofOrdinancesEXPORT20251209.xlsx  README.md  ingest_vectorize_zoning.ipynb  orlando_fmv_model_v2_documentation.docx  pyproject.toml
data/: .gitkeep  embeddings_prop_damage_resized_512.pkl  orlando-housing-data.csv
data/orlando-zoning-laws/: Chapter_14___PROPERTY_MAINTENANCE_CODE.docx  Chapter_63___ENVIRONMENTAL_PROTECTION.docx  Chapter_67___AFFORDABLE_HOUSING.docx
data/prop-damage-metadata/: property_images_r1_c1_processed_by_imagy_metadata.json  property_images_r1_c2_processed_by_imagy_metadata.json  property_images_r1_c3_processed_by_imagy_metadata.json  property_images_r1_c4_processed_by_imagy_metadata.json  property_images_r1_c5_processed_by_imagy_metadata.json  property_images_r1_c6_processed_by_imagy_metadata.json  property_images_r2_c1_processed_by_imagy_metadata.json  property_images_r2_c2_processed_by_imagy_metadata.json  property_images_r2_c3_processed_by_imagy_metadata.json  property_images_r2_c4_processed_by_imagy_metadata.json  property_images_r2_c5_processed_by_imagy_metadata.json  property_images_r2_c6_processed_by_imagy_metadata.json  property_images_r3_c1_processed_by_imagy_metadata.json  property_images_r3_c2_processed_by_imagy_metadata.json  property_images_r3_c3_processed_by_imagy_metadata.json  property_images_r3_c4_processed_by_imagy_metadata.json  property_images_r3_c5_processed_by_imagy_metadata.json  property_images_r3_c6_processed_by_imagy_metadata.json  (+18 more)
notebooks/: agent.ipynb  agent.py  agent2agent.ipynb  agent2agent_streamlit.py  agent_2_agent.ipynb  agent_notebook.ipynb  agent_streamlit_app.py  fine_tuning_llm_orlando_mkt_data.ipynb  ingest_vectorize_zoning.ipynb  mcp_layer.ipynb  mcp_layer.py  mcp_server.py  open_street_maps_api_test.ipynb  orlando_fine_tuning_market_expert.ipynb  resize_metadata_tag_prop_images.ipynb  tools.py  xgboost-fmv-model-v2.ipynb  xgboost-fmv-model.ipynb  xgboost-sales-txn.ipynb
output/: cv_results_v2.csv  feature_importance_permutation.csv  feature_importance_split.csv  feature_list_v2.csv  fine_tuning_llm_training_data.jsonl  orlando_fmv_xgboost_model_v2.json  orlando_mkt_data_expert_metadata.json  segment_analysis_v2.csv  spatial_kmeans.pkl
tests/: __init__.py  test_mcp.py
(+5 files in other folders)
